Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/validos/test8.symbol
SCOPE: global
Symbol(name='a', type='BOOL_VALUE', value=True)
Symbol(name='b', type='BOOL_VALUE', value=False)
Symbol(name='num', type='NUMBER_VALUE', value=5)

