Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_sintaxis/test1.symbol
SCOPE: global
Symbol(name='b', type=None, value='Unkown')
Symbol(name='a', type=None, value='Unkown')

